# Jimokomi

./: .gitignore  .gitmodules  .info.pod  AGENTS.md  ARCHITECTURE_BAD_SPLITS.md  ARCHITECTURE_CLEANUP_PLAN.md  ARCHITECTURE_ORGANIZATION_REPORT.md  CMakeLists.txt  CMakePresets.json  ENGINE_CLEANUP_CHECKLIST.md  ENGINE_REFACTOR_CHECKLIST.md  Jimokomi_Debug.p64  PERFORMANCE_AUDIT_PLAN.md  PERFORMANCE_EXECUTION_PROGRESS.md  PERFORMANCE_OPTIMIZATION_CHECKLIST.md  PERFORMANCE_PHASE1_CHECKLIST.md  PLAN.md  README.md  build.ps1  build.sh  debug_state.lua  disable_picotron_autostart.sh  enable_picotron_autostart.sh  error_explorer.lua  main.c  main.lua  picotron_startup.lua  setup_picotron_symlinks.sh  test.sh
Engine/: App.c  App.h  AppInternal.h  Engine.c  Engine.h  RuntimeConfig.c  RuntimeConfig.h  RuntimeInput.h  Settings.c  Settings.h
Engine/Core/: EngineConfig.h  Geometry.h  Input.c  Input.h  InputPacketStream.c  InputPacketStream.h  InputPacketStreamInternal.h  Logger.c  Logger.h  Memory.c  Memory.h  PathResolver.c  PathResolver.h  PlatformRuntime.c  PlatformRuntimeInternal.h  Profiler.c  Profiler.h  Profiling.c  Profiling.h  ProfilingOpenGL.cpp  RuntimeConfig.c  RuntimeConfig.h  Stats.c  Stats.h  TaskSystem.c  TaskSystem.h  TaskSystemInternal.h
Engine/Physics/: PhysicsBodies.c  PhysicsBodyControl.h  PhysicsHandles.h  PhysicsParticles.c  PhysicsParticles.h  PhysicsQueries.c  PhysicsTilemap.c  PhysicsWorld.c  PhysicsWorld.h  PhysicsWorldEntitiesInternal.h  PhysicsWorldInternal.h  PhysicsWorldLifecycleInternal.h  PhysicsWorldParticlesInternal.h  PhysicsWorldSnapshot.c  PhysicsWorldStatsInternal.h  PhysicsWorldTilemapInternal.h
Engine/Rendering/: Camera.c  Camera.h  DebugOverlay.c  DebugOverlay.h  DebugOverlayCommon.c  DebugOverlayDashboard.c  DebugOverlayDashboardInternal.h  DebugOverlayHistory.c  DebugOverlayHistoryInternal.h  DebugOverlayInput.c  DebugOverlayInspector.c  DebugOverlayInspectorInternal.h  DebugOverlayInternal.h  DebugOverlayLayout.c  DebugOverlayPanels.c  DebugOverlayStats.c  DebugOverlayUiInternal.h  DebugOverlayWorld.c  DebugOverlayWorldInternal.h  GeneratedFrame.c  GeneratedFrame.h  GridBackdrop.c  GridBackdrop.h  ParticleVisualResources.c  ParticleVisualResources.h  RaylibBackend.c  RaylibBackend.h  RaylibBackendInstancing.c  RaylibBackendInternal.h  RenderCommon.h  RenderSnapshot.c  RenderSnapshot.h  RenderSnapshotExchange.h  RenderSnapshotInternal.h  RenderTypes.h  Renderer.c  Renderer.h  RendererConfig.h  RendererInternal.h  RendererLifecycleInternal.h  (+36 more)
Engine/Runtime/: AppProfiler.c  AppProfiler.h  AppRenderLoop.c  AppRenderLoop.h  AppSimulation.c  AppSimulation.h  AppSimulationInternal.h  InteractionPacket.c  InteractionSimulation.c  InteractionSystem.c  InteractionSystem.h
Engine/Scene/: Component.c  Component.h  Entity.c  Entity.h  EntityInternal.h  Scene.c  Scene.h  SceneAccess.c  SceneAccess.h  SceneCameraFollowInternal.h  SceneFactories.c  SceneFactories.h  SceneInternal.h  SceneLifecycleInternal.h  SceneParticleVisuals.c  SceneParticleVisuals.h  SceneParticleVisualsInternal.h  ScenePhysics.h  ScenePhysicsInternal.h  SceneQueries.c  SceneQueries.h  SceneSpatialInternal.h  SceneStats.h  SceneStatsInternal.h  SceneStorage.c  SceneStorage.h  SceneStorageInternal.h  SceneTilemapInternal.h  SceneTypes.h  SceneView.c  SceneView.h  SpatialGrid.c  SpatialGrid.h  SpatialGridDiagnostics.c  SpatialGridInternal.h  SpatialGridQueries.c
Engine/Scene/Components/: CameraTargetComponent.c  CameraTargetComponent.h  ColliderComponent.c  ColliderComponent.h  DraggableComponent.c  DraggableComponent.h  RandomForceComponent.c  RandomForceComponent.h  RenderableComponent.c  RenderableComponent.h  RigidBodyComponent.c  RigidBodyComponent.h  SelectableComponent.c  SelectableComponent.h  TransformComponent.c  TransformComponent.h
Engine/Scene/Systems/: CameraFollowSystem.c  CameraFollowSystem.h  InputRoutingSystem.c  InputRoutingSystem.h  InteractionSystem.c  InteractionSystem.h  PhysicsSyncSystem.c  PhysicsSyncSystem.h  RandomForceSystem.c  RandomForceSystem.h
Game/: BallInteractionComponent.c  BallInteractionComponent.h  BallVisualResources.c  BallVisualResources.h  BallVisuals.c  BallVisuals.h  Game.c  Game.h  GameConfig.h  GameInputPacket.h  GameInteraction.c  GameInternal.h  GameProfilerMetadata.c  GameShared.c  GameSimulation.c  GameSnapshot.c  GameState.h  GameWorld.c  GameWorld.h  LiquidSourceSystem.c  LiquidSourceSystem.h  LiquidVisualResources.c  LiquidVisualResources.h
Sprite Backups/: CoCo.lua  Fly.lua  Glider.lua  Worm.lua
examples/: serialization_usage.lua
logs/: performance_profile.txt
src/: .info.pod  camera.lua  class.lua  collision.lua  engine.lua  graphics_helper.lua  polyfills.lua  primitives.lua  ray.lua  timer.lua
src/Game/: Game.lua  polyfills.lua
src/ProceduralTextures/: cloud_texture.lua  fire_texture.lua  grass_texture.lua  marble_texture.lua  stone_texture.lua  water_texture.lua  wood_texture.lua
src/classes/: ActionPlanner.lua  AnimationController.lua  AssetRegistry.lua  Camera.lua  Class.lua  Collider.lua  Collision.lua  Container.lua  DebugBuffer.lua  DebugOverlay.lua  Ecology.lua  Engine.lua  Entity.lua  Equipment.lua  EventBus.lua  FrameClock.lua  Graphics.lua  Inventory.lua  Layer.lua  LayerRenderer.lua  LayerSimulation.lua  Noise.lua  ProceduralTextureRenderer.lua  ProceduralTextures.lua  Raycast.lua  Screen.lua  Spawner.lua  StateMachine.lua  TileRegistry.lua  Timer.lua  Transform.lua  Vector.lua  WorldQuery.lua
src/data/: GameData.lua
src/ent/: .info.pod  Cherry.lua  CoCo.lua  Cricket.lua  Fly.lua  Worm.lua  jiji.lua
src/entities/: Jiji.lua
src/graphics/: Fire.lua  Skybox.lua  Stone.lua  Water.lua  Wood.lua
src/particles/: zzz.lua
src/primitives/: Agent.lua  Circle.lua  Entity.lua  Graphic.lua  Particle.lua  ParticleEmitter.lua  Ray.lua  Rectangle.lua  Sprite.lua  VisualOwner.lua  WorldObject.lua
src/procedural_textures/: CloudTexture.lua  FireTexture.lua  GrassTexture.lua  MarbleTexture.lua  StoneTexture.lua  WaterTexture.lua  WoodTexture.lua
src/utils/: SaveSystem.lua  Spawner.lua
(+184 files in other folders)
